--- a/exercises/exercise4/css/style.css
+++ b/exercises/exercise4/css/style.css
@@ -1,14 +1,3 @@
-/*********************************************
-
-Here is a description of any special CSS used.
-In this case it's just padding and margin to 0
-and then centring the canvas (and anything else)
-using the CSS Grid.
-
-Also hides overflow.
-
-**********************************************/
-
 body {
   padding: 0;
   margin: 0;
@@ -35,4 +24,5 @@ h1 {
   text-align: center;
   font-weight: 100;
   font-size: 2.5em;
+  letter-spacing: .5px;
 }
