updated timing, clean up of files

--- a/projects/project1/css/style.css
+++ b/projects/project1/css/style.css
@@ -11,7 +11,8 @@ body {
   font-family: Tahoma, sans-serif;
   font-weight: 300;
   color: #333;
-  background: #FF91AF;
+  /* background: #FF91AF; */
+  background: #000;
 }
 
 header,
