finished top secret raving redactionist activity

--- a/activities/raving-redactionist/css/style.css
+++ b/activities/raving-redactionist/css/style.css
@@ -1,6 +1,20 @@
-/*********************************************
+body {
 
-Here is a description of any special CSS used.
-By default that's nothing.
+}
 
-**********************************************/
+#secret-doc {
+  font-family: monospace;
+  width: 50vw;
+  font-size: 1.2rem;
+  margin: auto;
+}
+
+.redacted {
+  background-color: #000;
+  user-select: none;
+}
+
+.reveal {
+  color: red;
+  text-decoration: underline;
+}
