--- a/examples/datepicker/css/style.css
+++ b/examples/datepicker/css/style.css
@@ -13,7 +13,9 @@ main {
   display: block;
   margin: 0 auto;
   text-align: center;
-  padding-top: 20%;
+  padding-top: 15%;
+  width: 30%;
+  min-width: 300px;
 }
 
 section {
@@ -22,4 +24,15 @@ section {
 
 label {
   color: #222;
+}
+
+button {
+  display: inline-block;
+}
+
+#box {
+  background: #000;
+  height: 20px;
+  margin-bottom: 10px;
+  border: 1px solid #222;
 }
