--- a/exercises/exercise6/css/style.css
+++ b/exercises/exercise6/css/style.css
@@ -1,12 +1,17 @@
 body {
+  display: block;
+  width: 50vw;
+  margin: auto;
+}
 
+footer {
+  padding-top: 30px;
 }
 
 #secret-doc {
   font-family: monospace;
   width: 50vw;
   font-size: 1.2rem;
-  margin: auto;
 }
 
 .redacted {
@@ -17,4 +22,36 @@ body {
 .reveal {
   color: red;
   text-decoration: underline;
+}
+
+hr {
+  margin: 20px 0;
+}
+
+#employee {
+  color: red;
+  text-decoration: underline;
+}
+
+.animateText {
+  animation-duration: 4s;
+  animation-name: slidein;
+  animation-iteration-count: infinite;
+}
+
+@keyframes slidein {
+  from {
+    /* margin-left: 100%; */
+    width: 300%;
+  }
+
+  25% {
+    font-size: 125%;
+    width: 150%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
