replaces testing script / secret message

--- a/exercises/exercise7/css/style.css
+++ b/exercises/exercise7/css/style.css
@@ -39,6 +39,11 @@ button {
   right: 30px;
 }
 
+button:active {
+  background: magenta;
+  border: 0;
+}
+
 .xlarge {
   font-size: 1.75rem;
   margin-left: 50%;
