--- a/projects/project2/css/style.css
+++ b/projects/project2/css/style.css
@@ -13,97 +13,37 @@ body {
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr; */
   /* grid-template-rows: repeat(38, 1fr);
   grid-template-columns: repeat(10, 1fr); */
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(7, 1fr);
   height: 100vh;
   font-family: monospace;
   font-size: 14px;
-  color: #222;
+  color: #222; */
   overflow: hidden;
 }
+
+select, input {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.radiobtns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.radiobtns input {
+  margin: 0 10px 30px;
+}
+
 
 section {
   text-align: center;
   position: relative;
 }
-
-section p {
-  /* margin-top: 90vh; */
-  transform: rotate(90deg);
-  padding-left: 40%;
-}
-
-section:first-child {
-  width: 50%;
-  background: #D8D055;
-}
-
-section:nth-child(2) {
-  /* width: 90%; */
-  background: #CD8989;
-}
-
-section:nth-child(3) {
-  /* width: 30%; */
-  background: #062C3C;
-}
-
-section:nth-child(4) {
-  /* width: 100%; */
-  background: #8D389F;
-}
-
-section:nth-child(5) {
-  width: 39%;
-  background: #00FF00;
-}
-
-section:nth-child(6) {
-  margin-left: 50%;
-  background: #BBAA77;
-}
-
-section:nth-child(7) {
-  background: #006699;
-}
-section:nth-child(8) {
-  width: 90%;
-  background: #225A19;
-}
-section:nth-child(9) {
-  width: 39%;
-  background: #00FF7B;
-}
-section:nth-child(10) {
-  margin-left: 20%;
-  background: #FF00C8;
-}
-section:nth-child(11) {
-  margin-left: 30%;
-  margin-right: 30%;
-  background: #FFCCC8;
-}
-section:nth-child(12) {
-  width: 100%;
-  background: #44AABB ;
-}
-section:nth-child(13) {
-  width: 100%;
-  background: #AAFF7B;
-}
-section:nth-child(14) {
-  width: 17%;
-  background: salmon;
-}
-section:nth-child(15) {
-  width: 100%;
-  background: #123456;
-}
-section:nth-child(16) {
-  width: 80%;
-  background: #123456;
-}
-
+/*
 .prison {
   position: absolute;
   font-family: Helvetica, sans-serif;
@@ -119,13 +59,4 @@ section:nth-child(16) {
 
 #prisoner {
   font-size: 1em;
-}
-
-#escape-tunnel {
-  position: absolute;
-  border: 1px dashed #222;
-  border-radius: 50%;
-  padding: 25px 10px;
-  bottom: 0;
-  right: 0;
-}
+} */
