--- a/projects/project2/css/style.css
+++ b/projects/project2/css/style.css
@@ -8,18 +8,13 @@ body {
   margin: 0;
   background: #bbb;
   display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
-  /* grid-template-columns: repeat(73, 1fr);
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr; */
-  /* grid-template-rows: repeat(38, 1fr);
-  grid-template-columns: repeat(10, 1fr); */
-  /* grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(7, 1fr);
   height: 100vh;
   font-family: monospace;
   font-size: 14px;
   color: #222; */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 select, input {
@@ -60,3 +55,8 @@ section {
 #prisoner {
   font-size: 1em;
 } */
+
+#open-input-form {
+  display: block;
+  padding: 10px;
+}
