--- a/projects/project2/css/style.css
+++ b/projects/project2/css/style.css
@@ -7,14 +7,16 @@
 body {
   margin: 0;
   background: #bbb;
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(7, 1fr);
-  height: 100vh;
   font-family: monospace;
   font-size: 14px;
-  color: #222; */
+  color: rgba(0, 0, 0, 0);
   /* overflow: hidden; */
+}
+
+main {
+  display: grid;
+  /* grid-template-rows: repeat(4, 1fr); */
+  grid-template-columns: repeat(7, 1fr);
 }
 
 select, input {
@@ -33,11 +35,6 @@ select, input {
   margin: 0 10px 30px;
 }
 
-
-section {
-  text-align: center;
-  position: relative;
-}
 /*
 .prison {
   position: absolute;
@@ -57,6 +54,8 @@ section {
 } */
 
 #open-input-form {
+  position: absolute;
   display: block;
   padding: 10px;
+  right: 0;
 }
