--- a/projects/project2/css/style.css
+++ b/projects/project2/css/style.css
@@ -13,9 +13,9 @@ body {
 }
 
 h1 {
+  padding-top: 20px;
   font-family: sans-serif;
   font-size: 1.45rem;
-  color: darkblue;
 }
 
 main {
@@ -59,24 +59,31 @@ select, input {
 } */
 
 button {
-  position: absolute;
-  display: block;
-  padding: 10px;
+
 }
 
 #open-input-form {
+  position: absolute;
+  display: block;
+  padding: 10px;
   left: 50%;
   top: 40%;
 }
 
 #erase-data {
+  /* display: block; */
+  /* position: absolute; */
+  padding: 10px;
   top: 10px;
   right: 10px;
 }
 
 #imgdisplaybutton {
-  left: 30px;
-  top: 90%;
+  position: absolute;
+  display: block;
+  padding: 10px;
+  right: 30px;
+  top: 10%;
 }
 
 .titleimage img {
@@ -89,5 +96,11 @@ button {
   margin-top: 0;
   padding-left: 30px;
   color: black;
-  max-width: 400px;
+  max-width: 430px;
+}
+
+.xtraspace {
+  margin-top: 200px;
+  padding: 30px;
+  width: 115px;
 }
